css/styles.css
.container{
  font-family: 'Quicksand', sans-serif;
  color: white;
  height: auto;
  top: 0;
  width: 100%;

}
  nav{
    background-color: rgba(180,223,229,0.5);
    width: 99%;
    position: fixed;
    top: 0;
    overflow-x: hidden;
  }
  nav ul{
    text-align: right;
  }
  nav ul li{
    display: inline-block;
    text-decoration: none;
    text-transform: uppercase;
    padding: 1.25em;

  }

  nav ul li a{
    color: #303c6c;
    font-size: 1.2em;
    text-decoration: none;
  }
  nav ul li:hover{
    background-color: #fbe8a6;
  }
  nav ul li a:hover{
    color: #303c6c;
  }
  .about{
    margin-top: 6em;
    background-color: #303c6c;
    height: 25em;
  }
  #name{
    float: left;
    background-image: url('../images/code-girl.jpg');
    width: 70%;
    background-size: cover;
    background-position: center center;
    height:25em;
    background-repeat: no-repeat;
    text-align: center;
    color: white;
    margin-right: 1em;
    font-size: 1em;

  }
  #desc{
    padding: 0 1em 1em 1em;
    text-align: center;
    font-size: 1.5em;
    font-family: 'Quicksand', sans-serif;
  }
  #resume{
    background-color: #b4dfe5;
    color: #303c6c;

  }
  #one, #two{
    color: #f4976c;
  }
  #three{
    font-size: 1.5em;
  }
  #background{
    float: left;
    width: 70%;
    text-align: center;
    border-right: 2px solid #303c6c;
    margin-right: 2.5em;

  }
  #background ul{
    text-align: left;
  }
  #background h3{
    text-decoration: underline;
  }
  #background p span{
    text-align: left;
  }
  #skills{
    padding-top: 1em;
    padding-top: 5em;

  }
  #skills h2{
    text-align: center;

  }
  #skills img{
    margin-left: 10em;
  }
  #program{
    background-color: #303c6c;
    font-size: 1.5em;
    color: #ffffff;
    padding: 0.5em;

  }
  #program h2{
    text-align: center;
    color: #f4976c;
  }
  #contacts{
    font-family: 'Quicksand', sans-serif;
    background-color: #b4dfe5;
    display: flex;
    flex-direction: row;
    padding-left: 1em;
    padding-right: 1em;
    font-size: 1.5em;
    color:#303c6c;
    bottom: 0;
  }
  #contacts div img{
    padding: 0 1em 0 1em;
  }
  #contacts p{
    margin-bottom: 0;
  }
  #contacts div a img{
    margin-top: 1em;
    padding-top: 1em;
    margin-left: 1.2em;
  }
  #black{
    width: 350px;

  }
  .mywork{
    background-color: #303c6c;
    text-align: center;
    font-family: 'Quicksand', sans-serif;
    font-size: 1.5em;
    color:#f4976c;
    padding: 1em;
    display: inline-block;
  }
  #start h1 a{
    text-decoration: none;
    color: inherit;
  }
  #projects{
    background-color: #303c6c;
    display: flex;
    flex-direction: row;
    justify-content: space-between;

  }
  #projects div h2{
    font-family: 'Roboto Condensed', sans-serif;
    text-shadow: 0.025em 0.025em 0.15em #fbe8a6;
  }
  #projects div h2 a{
    text-decoration: none;
    color: #f4976c;
  }
  #projects div p{
    color: white;
  }
  #p1,#p2,#p3,#p4{
    border: 0.2em solid #303c6c;
  }
  #myBtn {
  display: none;
  position: fixed;
  bottom: 20px;
  right: 30px;
  z-index: 99;
  border: none;
  outline: none;
  background-color: #ffffff;
  color: #303c6c;
  cursor: pointer;
  padding: 15px;
  border-radius: 25px;
  font-size: 1em;
}

#myBtn:hover {
  background-color: #b4dfe5;
}
@media screen and (max-width: 1000px) {
  nav{
    overflow: auto;
    white-space: nowrap;
  }
  #projects {
    display: flex;
    flex-direction: column;
    background-color: #303c6c;
  }
  #contacts{
    display: flex;
    flex-direction: column;
    padding-top: 0.5em;
    padding-bottom: 0.5em;
  }
  #contacts div img{
    padding: 0.5em;
  }
  .about{
    display: inline-block;
    background-color: #303c6c;
    color: white;
    margin-top: 5.5em;
  }
  #name{
    background-image: url('../images/code-girl.jpg');
    background-size: cover;
    background-position: center center;
    height:25em;
    width: 100%;
    background-repeat: no-repeat;
    text-align: center;
    color: white;
    margin-right: 1em;
    font-size: 1em;
  }
  #contacts div a img{
    padding: 0.5em 0.2em 1em 0.2em;
    margin-left: 1.2em;
  }
  #desc{
    background-color: #303c6c;
  }
  #black{
    width: 250px;
    padding-top: 2.5em;
  }
  #background{
    border-right: none;
  }
}

